# U2U

./: CMakeLists.txt  Makefile  README.md  c_logger.c  c_logger.h  test_main.cpp  test_script.py  u2u.c  u2u.h  u2uCentral.c  u2uCentral.h  u2u_HAL_lx.c  u2u_HAL_lx.h  u2u_aux.c  u2u_aux.h  u2u_source.c  u2u_source.h  u2uclientdef.c  u2uclientdef.h
core/: Makefile  README.md
core/u2u_v3/: README.md  compile_and_test.sh
core/u2u_v3/src/: c_logger.c  c_logger.h  main.cpp  u2u.c  u2u.h  u2u_HAL_lx.c  u2u_HAL_lx.h  u2u_HAL_pico.c  u2u_HAL_pico.h  u2uclientdef.c  u2uclientdef.h
core/u2u_v3/src/hardware/: .uart.c.swo  .uart.c.swp  gpio.c  gpio.h  irq.h  uart.c  uart.h
core/u2u_v3/testing/: path_file.py  u2u_core_tester.py
core/u2u_v5/: u2u.c  u2u.h  u2u_client_profile.h  u2uclientprofile.c
hal/esp32/components/u2u_HAL/: CMakeLists.txt  u2u_HAL_esp.c
hal/esp32/components/u2u_HAL/include/: u2u_HAL_esp.h
hal/linux/: Makefile  README.md
hal/linux/src/: u2u_HAL_lx.c  u2u_HAL_lx.h
hal/rp2040/src/: u2u_HAL_pico.c  u2u_HAL_pico.h
tui/u2uctl/: README.md  data_processing.py  host_data.json  logging_config.py  paths.json  pip_requirements.txt  target_service.py  u2u_messaging.py  u2uctl.py
utils/crc_tester/: crc_test.c
utils/systemd_service/: u2u_node.service
